Added Settings Button to UnHide shows. (Under "Show" tab)
Added ability to set the language as default during startup.
Added ability to set the default user during startup.
Added Exit button to Settings Add User.
Added ability to export Program Related Settings (All, Program Settings, Users, or Directories). Cannot currently import them.

Fixes:
Will now properly switch to new seasons when found.
Fixed the search field text not being applied on list changes.
Fixed rechecking not searching for ignored shows.
Fixed deleting users.
Fixed removing directories.
Fixed bug with adding new directories.
Fixed button spacing on stages.
Fixed Stages appearing in the center of the screen before moving.
Fixed Reset Program not properly removing files if stored in jar's location. (Dev only until I'm confident that any issues with it are solved)


Notes- Version bumped to 'Alpha 1.0.0'. This is no longer considered pre-alpha. Updating is still supported from the oldest uploaded version of the program (Much to my surprise).
       Removed all long term "To\do" statements.
       Added Notes file which currently contains my To\do list.
Bonus- I have figured out how to have this automatically build into a runnable jar with Jenkins (Don't currently a server for one, but it is planned).

Pre-Alpha 0.9.8 -
Added comments. Still tons more to add.
Cleaned up unnecessary code.

Note- Most likely no new features for a bit as I add comments, clean up, and refactor.

Pre-Alpha 0.9.7.3 -
Converted all Object Booleans to Primitive booleans.

Pre-Alpha 0.9.7.2 -
Fixed program hanging (+ refusing to completely exit) on CheckShowFiles recheckShowFile if no directories are added.

Pre-Alpha 0.9.7.1 -
Added getLanguage() to MainRun firstRun.
You can no longer close the Language choice on firstRun.

Pre-Alpha 0.9.7 -
MainRun is no longer static.