@@ -397,7 +397,7 @@ public class Controller implements Initializable {
                     printCurrentSeasonEpisode.textProperty().bind(Strings.PrintCurrentSeasonEpisode);
                     printCurrentSeasonEpisode.setOnAction(e -> log.info(row.getItem().getShow() + " - Season: " + userInfoController.getCurrentSeason(row.getItem().getShow()) + " - Episode: " + userInfoController.getCurrentEpisode(row.getItem().getShow())));
                     MenuItem printShowInformation = new MenuItem();
-                    printShowInformation.setText("Print Show Information"); //TODO Add Localization
+                    printShowInformation.setText("Print Show Information");
                     printShowInformation.setOnAction(e -> showInfoController.printShowInformation(row.getItem().getShow()));
                     row.setOnMouseClicked(e -> {
                         if (e.getButton() == MouseButton.SECONDARY && (!row.isEmpty())) {
