@@ -58,6 +58,7 @@ Added ability to set the language as default during startup.
 Added ability to set the default user during startup.
 Added Exit button to Settings Add User.
 Added ability to export Program Related Settings (All, Program Settings, Users, or Directories). Cannot currently import them.
+Added button to directory adder that opens a directory picking dialog.
 
 Fixes:
 Will now properly switch to new seasons when found.
